force-app/main/default/objects/ServiceAppointment/fields/VI_Doors_Close_and_Lock__c.field-meta.xml
<CustomField>
    <fullName>VI_Doors_Close_and_Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Vehicle Inspection record type</description>
    <inlineHelpText>Check that vehicle doors close and lock properly
if YES = vehicle doors close and lock properly
if NO = vehicle doors DO NOT close and lock properly</inlineHelpText>
    <label>Doors Close and Lock</label>
    <type>Checkbox</type>
</CustomField>