force-app/main/default/objects/ServiceAppointment/fields/VI_First_Aid_Kit_OK__c.field-meta.xml
<CustomField>
    <fullName>VI_First_Aid_Kit_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Vehicle Inspection record type</description>
    <inlineHelpText>check that first aid kit is in vehicle and properly stocked</inlineHelpText>
    <label>First Aid Kit OK</label>
    <type>Checkbox</type>
</CustomField>