force-app/main/default/objects/ServiceAppointment/fields/VI_Fluids_Levels_OK__c.field-meta.xml
<CustomField>
    <fullName>VI_Fluids_Levels_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Vehicle Inspection record type</description>
    <inlineHelpText>Check oil, windscreen wash - ensure levels are correct</inlineHelpText>
    <label>Fluids Levels OK</label>
    <type>Checkbox</type>
</CustomField>