force-app/main/default/objects/ServiceAppointment/fields/VI_Horn_and_Back_up_Beeper__c.field-meta.xml
<CustomField>
    <fullName>VI_Horn_and_Back_up_Beeper__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Vehicle Inspection record type</description>
    <inlineHelpText>Check that horn and back-up beeper are functioning properly</inlineHelpText>
    <label>Horn and Back up Beeper OK</label>
    <type>Checkbox</type>
</CustomField>