force-app/main/default/objects/ServiceAppointment/fields/VI_Light_and_Indicators__c.field-meta.xml
<CustomField>
    <fullName>VI_Light_and_Indicators__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Vehicle Inspection record type</description>
    <inlineHelpText>Check that Light and Indicators are in good working order</inlineHelpText>
    <label>Light and Indicators OK</label>
    <type>Checkbox</type>
</CustomField>