force-app/main/default/objects/ServiceAppointment/fields/VI_Spill_Kit_OK__c.field-meta.xml
<CustomField>
    <fullName>VI_Spill_Kit_OK__c</fullName>
    <description>Used in Vehicle Inspection record type</description>
    <inlineHelpText>Check that Spill Kit is complete</inlineHelpText>
    <label>Spill Kit OK</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>