force-app/main/default/objects/ServiceAppointment/fields/VMI_Account__c.field-meta.xml
<CustomField>
    <fullName>VMI_Account__c</fullName>
    <formula>Account__r.VMI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VMI Account</label>
    <type>Checkbox</type>
</CustomField>