force-app/main/default/objects/ServiceAppointment/recordTypes/Generic_Service_Appointment.recordType-meta.xml
<RecordType>
    <fullName>Generic_Service_Appointment</fullName>
    <active>true</active>
    <description>A Service Appointment to indicate Technician service visit to a customer site.</description>
    <label>Generic Service Appointment</label>
</RecordType>