force-app/main/default/objects/ServiceAppointment/recordTypes/Vehicle_Inspection_Service_Appointment.recordType-meta.xml
<RecordType>
    <fullName>Vehicle_Inspection_Service_Appointment</fullName>
    <active>true</active>
    <description>A vehicle inspection Service Appointment.</description>
    <label>Vehicle Inspection Service Appointment</label>
</RecordType>