force-app/main/default/objects/ServiceAppointment/validationRules/Cannot_Reschedule_More_Than_2_Times.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Reschedule_More_Than_2_Times</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( Status ),  TEXT(Status ) =  $Setup.Field_Service_Settings__c.Missed_SA_Status_Value__c, 
 Reschedule_Counter__c &gt;= 2 )</errorConditionFormula>
    <errorMessage>Reschedule Limit Exceeded! An Appointment can only be Rescheduled up to 2 times.</errorMessage>
</ValidationRule>