force-app/main/default/objects/ServiceAppointment/listViews/All_UnScheduled_Appointments_Chemical.listView-meta.xml
<ListView>
    <fullName>All_UnScheduled_Appointments_Chemical</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>Type__c</columns>
    <columns>LatestEndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>None</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Chemical</value>
    </filters>
    <label>UnScheduled Appointments - Chemical</label>
    <language>en_US</language>
    <sharedTo>
        <role>CEO</role>
    </sharedTo>
</ListView>