force-app/main/default/objects/ServiceAppointment/listViews/All_UnScheduled_Appointments_Delivery.listView-meta.xml
<ListView>
    <fullName>All_UnScheduled_Appointments_Delivery</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>Type__c</columns>
    <columns>LatestEndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Delivery</value>
    </filters>
    <label>UnScheduled Appointments -Delivery</label>
    <language>en_US</language>
    <sharedTo>
        <role>CEO</role>
    </sharedTo>
</ListView>