force-app/main/default/objects/ServiceAppointment/listViews/All_UnScheduled_Appointments_PEST.listView-meta.xml
<ListView>
    <fullName>All_UnScheduled_Appointments_PEST</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>Type__c</columns>
    <columns>LatestEndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>None</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Pest Control</value>
    </filters>
    <label>UnScheduled Appointments - Pest Control</label>
    <language>en_US</language>
    <sharedTo>
        <role>CEO</role>
    </sharedTo>
</ListView>