force-app/main/default/objects/ServiceAppointment/listViews/FieldServiceMobile.listView-meta.xml
<ListView>
    <fullName>FieldServiceMobile</fullName>
    <columns>Account_Name__c</columns>
    <columns>Special_Instructions__c</columns>
    <columns>FSL__GanttLabel__c</columns>
    <columns>Name</columns>
    <filterScope>AssignedToMe</filterScope>
    <filters>
        <field>SchedStartTime</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <filters>
        <field>SchedEndTime</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:7</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>notEqual</operation>
        <value>Scheduled</value>
    </filters>
    <label>FieldServiceMobile</label>
    <language>en_US</language>
</ListView>