force-app/main/default/objects/ServiceAppointment/listViews/FieldServiceMobilePestTech.listView-meta.xml
<ListView>
    <fullName>FieldServiceMobilePestTech</fullName>
    <booleanFilter>(1 AND 4) OR (2 AND 4) OR (3 AND 4)</booleanFilter>
    <columns>Account_Name__c</columns>
    <columns>Special_Instructions__c</columns>
    <columns>FSL__GanttLabel__c</columns>
    <columns>Name</columns>
    <columns>Status</columns>
    <filterScope>AssignedToMe</filterScope>
    <filters>
        <field>SchedStartTime</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>SchedStartTime</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:5</value>
    </filters>
    <filters>
        <field>SchedStartTime</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:5</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>notEqual</operation>
        <value>Scheduled</value>
    </filters>
    <label>FieldServiceMobilePestTech</label>
    <language>en_US</language>
</ListView>