force-app/main/default/objects/ServiceAppointment/listViews/Today_s_Delivery_Appointments.listView-meta.xml
<ListView>
    <fullName>Today_s_Delivery_Appointments</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>Type__c</columns>
    <columns>LatestEndTime</columns>
    <columns>FSL__InJeopardy__c</columns>
    <columns>Require_24_Hour_Notification__c</columns>
    <columns>Require_48_Hour_Notification__c</columns>
    <columns>Email_Sent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>New,Scheduled</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Delivery</value>
    </filters>
    <filters>
        <field>LatestEndTime</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Delivery Appointments</label>
    <sharedTo>
        <role>CEO</role>
    </sharedTo>
</ListView>