force-app/main/default/objects/ServiceAppointment/listViews/UnScheduled_Appointments_Life_Safety.listView-meta.xml
<ListView>
    <fullName>UnScheduled_Appointments_Life_Safety</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>Type__c</columns>
    <columns>LatestEndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>None</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Life Safety</value>
    </filters>
    <label>UnScheduled Appointments - Life Safety</label>
    <language>en_US</language>
    <sharedTo>
        <role>CEO</role>
    </sharedTo>
</ListView>