force-app/main/default/objects/ServiceAppointment/listViews/Unscheduled_Installations_MarkhamGroup.listView-meta.xml
<ListView>
    <fullName>Unscheduled_Installations_MarkhamGroup</fullName>
    <columns>LatestEndTime</columns>
    <columns>Id</columns>
    <columns>Name</columns>
    <columns>ServiceTerritory</columns>
    <columns>Account_Name__c</columns>
    <columns>Status</columns>
    <columns>EarliestStartTime</columns>
    <columns>EstDuration</columns>
    <columns>ParentRecord</columns>
    <columns>ParentRecordType</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isInstallation__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ServiceTerritory</field>
        <operation>contains</operation>
        <value>GTA,Toronto,M4,M5</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>New,Scheduled,Reschedule</value>
    </filters>
    <label>Unscheduled Installations - MarkhamGroup</label>
    <language>en_US</language>
    <sharedTo>
        <role>CEO</role>
        <role>System_Administrator</role>
    </sharedTo>
</ListView>